--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I've worked in marketing for the past 10 years</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originally from El Salvador, been living in Florida for 10 years</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>reading & walking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>full stack developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to create new things and move away from the craziness of marketing</p>
     </section>
 
     <footer id="footer">
